--- a/index.html
+++ b/index.html
@@ -1,13 +1,285 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <load src="/public/src/partials/header.html"/>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header class="header">
+    <div class="container">
+      <div class="branding">
+        <div class="logo">
+          <svg class="header-rose-svg" width="24px" height="49px">
+            <use xlink:href="./image/symbol-defs.svg#icon-rose" x="" y="" />
+          </svg>
+          <div class="site">
+            <h5 class="site-title">Explore</h5>
+            <h5 class="site-subtitle">Indonesia</h5>
+          </div>
+        </div>
+        <ul class="nav-list">
+          <li><a href="" class="nav-link">Destinations</a></li>
+          <li><a href="" class="nav-link">Experiences</a></li>
+          <li><a href="" class="nav-link">About</a></li>
+          <li><a href="" class="nav-link">Gallery</a></li>
+        </ul>
+        <div class="social-icons">
+          <svg width="30px" height="30px" class="social-icon">
+            <use xlink:href="./image/symbol-defs.svg#icon-search" x="" y="" />
+          </svg>
+          <svg width="30px" height="35px" class="social-icon">
+            <use xlink:href="./image/symbol-defs.svg#icon-menu" x="" y="" />
+          </svg>
+        </div>
+      </div>
+    </div>
+    <div class="hero-container container">
+      <div class="hero-content">
+        <div class="slide-indicator">
+          <div class="rectangle-header"></div>
+          <div class="slide-circle"></div>
+        </div>
+        <div class="welcome-header">
+          <h1 class="hero-title">Explore Indonesia</h1>
+          <button type="button" class="btn-primary btn-header">Start Travelling</button>
+        </div>
+      </div>
+      <ul class="hero-info-list">
+        <div class="social-links">
+          <p class="date">Fb</p>
+          <p class="date">In</p>
+          <p class="date">Tw</p>
+          <p class="slide-number">01</p>
+        </div>
+        <div class="hero-info-collumn">
+          <li class="info-item">
+            <p class="info-number">01</p>
+            <h4 class="info-title">Title Here</h4>
+            <p class="info-text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+          </li>
+          <li class="info-item">
+            <p class="info-number">02</p>
+            <h4 class="info-title">Title Here</h4>
+            <p class="info-text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+          </li>
+          <li class="info-item">
+            <p class="info-number">03</p>
+            <h4 class="info-title">Title Here</h4>
+            <p class="info-text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+          </li>
+        </div>
+        <div class="hero-media">
+          <img src="./image/header-house.png" alt="Media Image" class="hero-img">
+          <div class="header-circle">
+            <svg class="hero-svg-header" width="40px" height="40px">
+              <use xlink:href="./image/symbol-defs.svg#icon-play_arrow" x="" y="" />
+            </svg>
+          </div>
+        </div>
+      </ul>
+    </div>
+  </header>
+  <main class="main-content">
+    <section class="exploration">
+      <div class="container exploration-container">
+        <ul class="highlight-list">
+          <li class="highlight-item">
+            <img src="" alt="Highlight Image">
+            <div class="highlight-content">
+              <h4 class="highlight-title">The Walkways of Indonesia Spellbind</h4>
+              <p class="highlight-description">Lorem ipsum dolor sit amet, consectetur adip iscing elit.</p>
+              <button type="button" class="btn-secondary">Learn More</button>
+            </div>
+          </li>
+        </ul>
+        <ul class="highlight-list">
+          <li class="highlight-item">
+            <div class="highlight-content">
+              <h4 class="highlight-title">Perfect Beaches Exude Relaxation and Fun</h4>
+              <p class="highlight-description">Lorem ipsum dolor sit amet, consectetur adip iscing elit.</p>
+              <button type="button" class="btn-secondary">Learn More</button>
+            </div>
+            <img src="" alt="Highlight Image">
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="secrets">
+      <div class="container secrets-container">
+        <h2 class="section-title">Explore Our Secrets</h2>
+        <div class="icon-gallery">
+          <svg></svg>
+          <img src="" alt="Icon">
+          <img src="" alt="Icon">
+          <img src="" alt="Icon">
+          <svg></svg>
+        </div>
+        <div class="icon-grid">
+          <svg></svg>
+          <svg></svg>
+          <svg></svg>
+          <svg></svg>
+        </div>
+      </div>
+      <div class="container numbers-container">
+        <div class="numbers-header">
+          <h2 class="number-title">By The Numbers</h2>
+          <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="stats">
+          <ul class="stats-list">
+            <li class="stat-item">
+              <h3 class="stat-value">100+</h3>
+              <p class="stat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </li>
+            <li class="stat-item">
+              <h3 class="stat-value">43,000+</h3>
+              <p class="stat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </li>
+            <li class="stat-item">
+              <h3 class="stat-value">30+</h3>
+              <p class="stat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="hills">
+      <div class="container hills-container">
+        <h3 class="hill-title">Our Hills and Valleys Are Like Nothing You’ve Seen</h3>
+        <p class="hill-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button type="button" class="btn-primary">Learn More</button>
+      </div>
+    </section>
+    <section class="experiences">
+      <div class="container experiences-container">
+        <div class="experience-quote">
+          <h3 class="experience-title">Live a life like you wouldn’t imagine, experience a life you wouldn’t expect.
+          </h3>
+          <div class="experience-media">
+            <img src="" alt="Experience Image">
+            <svg></svg>
+          </div>
+        </div>
+        <ul class="experience-list">
+          <li class="experience-item">
+            <img src="" alt="Experience Image">
+            <div class="experience-content">
+              <h3 class="experience-content-title">In The Country</h3>
+              <p class="experience-content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </li>
+          <li class="experience-item">
+            <img src="" alt="Experience Image">
+            <div class="experience-content">
+              <h3>In The City</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="gallery">
+      <div class="container gallery-container">
+        <h2 class="gallery-title">Photo Gallery</h2>
+        <p class="gallery-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="gallery-images">
+          <img src="" alt="Gallery Image">
+          <img src="" alt="Gallery Image">
+          <img src="" alt="Gallery Image">
+          <img src="" alt="Gallery Image">
+          <img src="" alt="Gallery Image">
+          <img src="" alt="Gallery Image">
+        </div>
+      </div>
+    </section>
+    <section class="getting-there">
+      <div class="container getting-there-container">
+        <h2 class="getting-there-title">Getting There</h2>
+        <ul class="getting-there-list">
+          <li class="getting-there-item">
+            <div class="icon-title">
+              <svg></svg>
+              <h4 class="getting-pretitle">Booking Your Flights</h4>
+            </div>
+            <p class="getting-pretext">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </li>
+          <li class="getting-there-item">
+            <div class="icon-title">
+              <svg></svg>
+              <h4 class="getting-pretitle">
+                </h3>>Choosing Your Hotel</h4>
+            </div>
+            <p class="getting-pretext">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <ul class="sub-list">
+              <li class="sub-item">
+                <img src="" alt="Sub-item Image">
+                <div class="sub-content">
+                  <h4 class="getting-pretitle">Travelling There</h4>
+                  <p class="getting-pretext">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <li class="getting-there-item">
+            <div class="icon-title">
+              <svg></svg>
+              <h3 class="getting-pretitle">Planning Your Experiences</h3>
+            </div>
+            <div class="item-content">
+              <p class="getting-pretext">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <button type="button" class="btn-secondary">Learn More</button>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="container footer-container">
+      <div class="footer-branding">
+        <img src="" alt="Footer Logo">
+        <div class="footer-text">
+          <span class="footer-span">Explore</span>
+          <p class="footer-title">Indonesia</p>
+        </div>
+      </div>
+      <ul class="footer-nav">
+        <li><a href="" class="footer-link">About</a></li>
+        <li><a href="" class="footer-link">Pricing</a></li>
+        <li><a href="" class="footer-link">Company</a></li>
+        <li><a href="" class="footer-link">Blog</a></li>
+      </ul>
+      <div class="footer-social">
+        <svg></svg>
+        <svg></svg>
+        <svg></svg>
+        <p class="date-of-copy">Copyright © 2019</p>
+      </div>
+      <svg></svg>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
