--- a/index.html
+++ b/index.html
@@ -23,85 +23,87 @@
 
 <body>
   <header class="header">
-    <div class="container">
-      <div class="branding">
-        <div class="logo">
-          <svg class="header-rose-svg" width="24px" height="49px">
-            <use xlink:href="./image/symbol-defs.svg#icon-rose" x="" y="" />
-          </svg>
-          <div class="site">
-            <h5 class="site-title">Explore</h5>
-            <h5 class="site-subtitle">Indonesia</h5>
+    <div class="header-container">
+      <div class="container">
+        <div class="branding">
+          <div class="logo">
+            <svg class="header-rose-svg" width="24px" height="49px">
+              <use xlink:href="./image/symbol-defs.svg#icon-rose" x="" y="" />
+            </svg>
+            <div class="site">
+              <h5 class="site-title">Explore</h5>
+              <h5 class="site-subtitle">Indonesia</h5>
+            </div>
           </div>
-        </div>
-        <ul class="nav-list">
-          <li><a href="" class="nav-link">Destinations</a></li>
-          <li><a href="" class="nav-link">Experiences</a></li>
-          <li><a href="" class="nav-link">About</a></li>
-          <li><a href="" class="nav-link">Gallery</a></li>
-        </ul>
-        <div class="social-icons">
-          <svg width="30px" height="30px" class="social-icon">
-            <use xlink:href="./image/symbol-defs.svg#icon-search" x="" y="" />
-          </svg>
-          <svg width="30px" height="35px" class="social-icon">
-            <use xlink:href="./image/symbol-defs.svg#icon-menu" x="" y="" />
-          </svg>
-        </div>
-      </div>
-    </div>
-    <div class="hero-container container">
-      <div class="hero-content">
-        <div class="slide-indicator">
-          <div class="rectangle-header"></div>
-          <div class="slide-circle"></div>
-        </div>
-        <div class="welcome-header">
-          <h1 class="hero-title">Explore Indonesia</h1>
-          <button type="button" class="btn-primary btn-header">Start Travelling</button>
-        </div>
-      </div>
-      <ul class="hero-info-list">
-        <div class="social-links">
-          <p class="date">Fb</p>
-          <p class="date">In</p>
-          <p class="date">Tw</p>
-          <p class="slide-number">01</p>
-        </div>
-        <div class="hero-info-collumn">
-          <li class="info-item">
-            <p class="info-number">01</p>
-            <h4 class="info-title">Title Here</h4>
-            <p class="info-text">Lorem ipsum dolor sit amet et amet ist ame.</p>
-          </li>
-          <li class="info-item">
-            <p class="info-number">02</p>
-            <h4 class="info-title">Title Here</h4>
-            <p class="info-text">Lorem ipsum dolor sit amet et amet ist ame.</p>
-          </li>
-          <li class="info-item">
-            <p class="info-number">03</p>
-            <h4 class="info-title">Title Here</h4>
-            <p class="info-text">Lorem ipsum dolor sit amet et amet ist ame.</p>
-          </li>
-        </div>
-        <div class="hero-media">
-          <img src="./image/header-house.png" alt="Media Image" class="hero-img">
-          <div class="header-circle">
-            <svg class="hero-svg-header" width="40px" height="40px">
-              <use xlink:href="./image/symbol-defs.svg#icon-play_arrow" x="" y="" />
+          <ul class="nav-list">
+            <li><a href="" class="nav-link">Destinations</a></li>
+            <li><a href="" class="nav-link">Experiences</a></li>
+            <li><a href="" class="nav-link">About</a></li>
+            <li><a href="" class="nav-link">Gallery</a></li>
+          </ul>
+          <div class="social-icons">
+            <svg width="30px" height="30px" class="social-icon">
+              <use xlink:href="./image/symbol-defs.svg#icon-search" x="" y="" />
+            </svg>
+            <svg width="30px" height="35px" class="social-icon">
+              <use xlink:href="./image/symbol-defs.svg#icon-menu" x="" y="" />
             </svg>
           </div>
         </div>
-      </ul>
+      </div>
+      <div class="hero-container container">
+        <div class="hero-content">
+          <div class="slide-indicator">
+            <div class="rectangle-header"></div>
+            <div class="slide-circle"></div>
+          </div>
+          <div class="welcome-header">
+            <h1 class="hero-title">Explore Indonesia</h1>
+            <button type="button" class="btn-primary btn-header">Start Travelling</button>
+          </div>
+        </div>
+        <ul class="hero-info-list">
+          <div class="social-links">
+            <p class="date">Fb</p>
+            <p class="date">In</p>
+            <p class="date">Tw</p>
+            <p class="slide-number">01</p>
+          </div>
+          <div class="hero-info-collumn">
+            <li class="info-item">
+              <p class="info-number">01</p>
+              <h4 class="info-title">Title Here</h4>
+              <p class="info-text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+            </li>
+            <li class="info-item">
+              <p class="info-number">02</p>
+              <h4 class="info-title">Title Here</h4>
+              <p class="info-text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+            </li>
+            <li class="info-item">
+              <p class="info-number">03</p>
+              <h4 class="info-title">Title Here</h4>
+              <p class="info-text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+            </li>
+          </div>
+          <div class="hero-media">
+            <img src="./image/header-house.png" alt="Media Image" class="hero-img">
+            <div class="header-circle">
+              <svg class="hero-svg-header" width="40px" height="40px">
+                <use xlink:href="./image/symbol-defs.svg#icon-play_arrow" x="" y="" />
+              </svg>
+            </div>
+          </div>
+        </ul>
+      </div>
     </div>
   </header>
   <main class="main-content">
     <section class="exploration">
-      <div class="container exploration-container">
-        <ul class="highlight-list">
-          <li class="highlight-item">
-            <img src="" alt="Highlight Image">
+      <div class="exploration-container">
+        <ul class="highlight-list first-bg">
+          <li class="highlight-item highlight-1">
+            <img src="./image/main-road.png" alt="Highlight Image" class="highlight-image image-hight-1">
             <div class="highlight-content">
               <h4 class="highlight-title">The Walkways of Indonesia Spellbind</h4>
               <p class="highlight-description">Lorem ipsum dolor sit amet, consectetur adip iscing elit.</p>
@@ -109,53 +111,71 @@
             </div>
           </li>
         </ul>
-        <ul class="highlight-list">
-          <li class="highlight-item">
+        <ul class="highlight-list second-bg">
+          <li class="highlight-item highlight-2">
             <div class="highlight-content">
               <h4 class="highlight-title">Perfect Beaches Exude Relaxation and Fun</h4>
               <p class="highlight-description">Lorem ipsum dolor sit amet, consectetur adip iscing elit.</p>
               <button type="button" class="btn-secondary">Learn More</button>
             </div>
-            <img src="" alt="Highlight Image">
+            <img src="./image/main-beach.png" alt="Highlight Image" class="highlight-image image-hight-2">
           </li>
         </ul>
       </div>
     </section>
     <section class="secrets">
-      <div class="container secrets-container">
+      <div class="container-fluid secrets-container">
         <h2 class="section-title">Explore Our Secrets</h2>
         <div class="icon-gallery">
-          <svg></svg>
-          <img src="" alt="Icon">
-          <img src="" alt="Icon">
-          <img src="" alt="Icon">
-          <svg></svg>
+          <svg width="14px" height="23px" class="arrow-l">
+            <use href="./image/symbol-defs.svg#icon-arrow-left" x="" y="" />
+          </svg>
+          <div class="gallery-secret">
+            <img src="./image/main-castle.png" alt="Icon">
+            <img src="./image/main-kids.png" alt="Icon">
+            <img src="./image/main-colorfull.png" alt="Icon">
+          </div>
+          <svg width="14px" height="23px" class="arrow-r">
+            <use href="./image/symbol-defs.svg#icon-arrow-right" x="" y="" />
+          </svg>
         </div>
         <div class="icon-grid">
-          <svg></svg>
-          <svg></svg>
-          <svg></svg>
-          <svg></svg>
+          <svg width="19px" height="19px" class="main-circle">
+            <use href="./image/symbol-defs.svg#icon-circle" x="" y="" />
+          </svg>
+          <svg width="19px" height="19px" class="main-circle">
+            <use href="./image/symbol-defs.svg#icon-circle" x="" y="" />
+          </svg>
+          <svg width="50px" height="19px" class="main-rectangle">
+            <use href="./image/symbol-defs.svg#icon-Rectangle" x="" y="" />
+          </svg>
+          <svg width="19px" height="19px" class="main-circle">
+            <use href="./image/symbol-defs.svg#icon-circle" x="" y="" />
+          </svg>
         </div>
       </div>
-      <div class="container numbers-container">
+      <div class="numbers-container">
         <div class="numbers-header">
           <h2 class="number-title">By The Numbers</h2>
-          <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p class="number-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna et
+            libero.Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit.</p>
         </div>
         <div class="stats">
           <ul class="stats-list">
             <li class="stat-item">
               <h3 class="stat-value">100+</h3>
-              <p class="stat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p class="stat-description stat-n-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna
+                et libero.</p>
             </li>
             <li class="stat-item">
               <h3 class="stat-value">43,000+</h3>
-              <p class="stat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p class="stat-description stat-n-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo.</p>
             </li>
             <li class="stat-item">
               <h3 class="stat-value">30+</h3>
-              <p class="stat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p class="stat-description stat-n-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna
+                et libero.</p>
             </li>
           </ul>
         </div>
