--- a/index.html
+++ b/index.html
@@ -165,16 +165,19 @@
           <ul class="stats-list">
             <li class="stat-item">
               <h3 class="stat-value">100+</h3>
-              <p class="stat-description stat-n-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna
+              <p class="stat-description stat-n-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                commodo magna
                 et libero.</p>
             </li>
             <li class="stat-item">
               <h3 class="stat-value">43,000+</h3>
-              <p class="stat-description stat-n-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo.</p>
+              <p class="stat-description stat-n-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                commodo.</p>
             </li>
             <li class="stat-item">
               <h3 class="stat-value">30+</h3>
-              <p class="stat-description stat-n-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna
+              <p class="stat-description stat-n-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                commodo magna
                 et libero.</p>
             </li>
           </ul>
@@ -182,35 +185,43 @@
       </div>
     </section>
     <section class="hills">
-      <div class="container hills-container">
+      <div class="hills-container">
+        <img src="./image/main-decoration-1.png" alt="" class="first-photo">
         <h3 class="hill-title">Our Hills and Valleys Are Like Nothing You’ve Seen</h3>
-        <p class="hill-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p class="hill-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet magna commodo,
+          tempus dolor sit amet, laoreet
+          elit. Donec mauris tortor.</p>
         <button type="button" class="btn-primary">Learn More</button>
+        <img src="./image/main-decoration-2.png" alt="" class="second-photo">
       </div>
     </section>
     <section class="experiences">
-      <div class="container experiences-container">
+      <div class="experiences-container">
         <div class="experience-quote">
           <h3 class="experience-title">Live a life like you wouldn’t imagine, experience a life you wouldn’t expect.
           </h3>
           <div class="experience-media">
-            <img src="" alt="Experience Image">
-            <svg></svg>
+            <img src="./image/main-live-1.png" alt="experience-image">
+            <svg width="16px" height="16px" class="experience-svg">
+              <use href="./image/symbol-defs.svg#icon-arrow-right" x="" y="" />
+            </svg>
+            <div class="circle-svg"></div>
           </div>
         </div>
         <ul class="experience-list">
           <li class="experience-item">
-            <img src="" alt="Experience Image">
+            <img src="./image/main-live-2.png" alt="experience-image-list">
             <div class="experience-content">
               <h3 class="experience-content-title">In The Country</h3>
-              <p class="experience-content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p class="experience-content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+                dapibus mauris in lectus tempus.</p>
             </div>
           </li>
           <li class="experience-item">
-            <img src="" alt="Experience Image">
+            <img src="./image/main-live-3.png" alt="experience-image-list">
             <div class="experience-content">
-              <h3>In The City</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h3 class="experience-content-title">In The City</h3>
+              <p class="experience-content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus mauris in.</p>
             </div>
           </li>
         </ul>
