--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./image/symbol-defs.svg#icon-rose" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8"/>
+  <link rel="icon" type="image/svg+xml" href="./image/symbol-defs.svg#icon-rose"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vite App</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -107,8 +107,9 @@
           <li class="highlight-item highlight-1">
             <img src="./image/main-road.png" alt="Highlight Image" class="highlight-image image-hight-1">
             <div class="highlight-content">
-              <h4 class="highlight-title">The Walkways of Indonesia Spellbind</h4>
-              <p class="highlight-description">Lorem ipsum dolor sit amet, consectetur adip iscing elit.</p>
+              <h4 class="highlight-title highlight-title-1">The Walkways of Indonesia Spellbind</h4>
+              <p class="highlight-description highlight-description-1">Lorem ipsum dolor sit amet, consectetur adip
+                iscing elit.</p>
               <button type="button" class="btn-secondary">Learn More</button>
             </div>
           </li>
@@ -116,8 +117,9 @@
         <ul class="highlight-list second-bg">
           <li class="highlight-item highlight-2">
             <div class="highlight-content">
-              <h4 class="highlight-title">Perfect Beaches Exude Relaxation and Fun</h4>
-              <p class="highlight-description">Lorem ipsum dolor sit amet, consectetur adip iscing elit.</p>
+              <h4 class="highlight-title highlight-title-2">Perfect Beaches Exude Relaxation and Fun</h4>
+              <p class="highlight-description highlight-description-2">Lorem ipsum dolor sit amet, consectetur adip
+                iscing elit.</p>
               <button type="button" class="btn-secondary">Learn More</button>
             </div>
             <img src="./image/main-beach.png" alt="Highlight Image" class="highlight-image image-hight-2">
@@ -129,15 +131,15 @@
       <div class="container-fluid secrets-container">
         <h2 class="section-title">Explore Our Secrets</h2>
         <div class="icon-gallery">
-          <svg width="14px" height="23px" class="arrow-l">
+          <svg width="14px" height="23px" class="arrow-1">
             <use href="./image/symbol-defs.svg#icon-arrow-left" x="" y="" />
           </svg>
           <div class="gallery-secret">
-            <img src="./image/main-castle.png" alt="Icon">
-            <img src="./image/main-kids.png" alt="Icon">
-            <img src="./image/main-colorfull.png" alt="Icon">
+            <img src="./image/main-castle.png" alt="Icon" class="gallery-secret-img secret-img-1">
+            <img src="./image/main-kids.png" alt="Icon" class="gallery-secret-img secret-img-2">
+            <img src="./image/main-colorfull.png" alt="Icon" class="gallery-secret-img secret-img-3">
           </div>
-          <svg width="14px" height="23px" class="arrow-r">
+          <svg width="14px" height="23px" class="arrow-2">
             <use href="./image/symbol-defs.svg#icon-arrow-right" x="" y="" />
           </svg>
         </div>
@@ -201,7 +203,7 @@
           <h3 class="experience-title">Live a life like you wouldn’t imagine, experience a life you wouldn’t expect.
           </h3>
           <div class="experience-media">
-            <img src="./image/main-live-1.png" alt="experience-image">
+            <img src="./image/main-live-1.png" alt="experience-image" class="experience-image">
             <svg width="30px" height="30px" class="experience-svg">
               <use href="./image/symbol-defs.svg#icon-play_arrow" x="" y="" />
             </svg>
@@ -210,18 +212,20 @@
         </div>
         <ul class="experience-list">
           <li class="experience-item">
-            <img src="./image/main-live-2.png" alt="experience-image-list">
+            <img src="./image/main-live-2.png" alt="experience-image-list" class="experience-image-list">
             <div class="experience-content">
-              <h3 class="experience-content-title">In The Country</h3>
-              <p class="experience-content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+              <h3 class="experience-content-title experience-content-1">In The Country</h3>
+              <p class="experience-content-text experience-text-1">Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Phasellus
                 dapibus mauris in lectus tempus.</p>
             </div>
           </li>
           <li class="experience-item">
-            <img src="./image/main-live-3.png" alt="experience-image-list">
+            <img src="./image/main-live-3.png" alt="experience-image-list" class="experience-image-list">
             <div class="experience-content">
-              <h3 class="experience-content-title">In The City</h3>
-              <p class="experience-content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+              <h3 class="experience-content-title experience-content-2">In The City</h3>
+              <p class="experience-content-text experience-text-2">Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Phasellus
                 dapibus mauris in.</p>
             </div>
           </li>
@@ -264,6 +268,10 @@
                   in lectus tempus, eget tincidunt lacus
                   varius. Sed euismod orci dictum faucibus malesuada. Praesent sed eros tincidunt, viverra neque auctor,
                   lobortis enim.</p>
+                <div class="mobile-block">
+                  <p class="mobile-text">Lorem ipsum dolor set,,,,</p>
+                  <button class="mobile-button">Show more</button>
+                </div>
               </div>
             </div>
           </li>
@@ -277,9 +285,13 @@
                   in lectus tempus, eget tincidunt lacus
                   varius. Sed euismod orci dictum faucibus malesuada. Praesent sed eros tincidunt, viverra neque auctor,
                   lobortis enim.</p>
+                <div class="mobile-block">
+                  <p class="mobile-text">Lorem ipsum dolor set,,,,</p>
+                  <button class="mobile-button">Show more</button>
+                </div>
                 <ul class="sub-list">
                   <li class="sub-item">
-                    <img src="./image/main-getting.png" alt="Sub-item Image">
+                    <img src="./image/main-getting.png" alt="Sub-item Image" class="sub-item-image">
                     <svg class="play-arrow-getting" width="40px" height="40px">
                       <use xlink:href="./image/symbol-defs.svg#icon-play_arrow" x="" y="" />
                     </svg>
@@ -288,6 +300,10 @@
                       <p class="getting-pretext sub-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Phasellus dapibus
                         mauris in lectus tempus, eget tincidunt.</p>
+                      <div class="mobile-block">
+                        <p class="mobile-text">Lorem ipsum dolor set,,,,</p>
+                        <button class="mobile-button">Show more</button>
+                      </div>
                     </div>
                   </li>
                 </ul>
@@ -298,12 +314,16 @@
             <div class="getting-block">
               <div class="getting-circle">3</div>
               <div class="icon-title getting-end">
-                <h4 class="getting-pretitle">Planning Your Experiences</h4>
+                <h4 class="getting-pretitle pretitle-change">Planning Your Experiences</h4>
                 <div class="item-content">
                   <p class="getting-pretext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus
                     mauris in lectus tempus, eget tincidunt lacus
                     varius.</p>
-                  <button type="button" class="btn-secondary">Learn More</button>
+                  <div class="mobile-block">
+                    <p class="mobile-text">Lorem ipsum dolor set,,,,</p>
+                    <button class="mobile-button">Show more</button>
+                  </div>
+                  <button type="button" class="btn-secondary mobile-btn-hide">Learn More</button>
                 </div>
               </div>
             </div>
@@ -330,15 +350,17 @@
         <li><a href="" class="footer-link">Blog</a></li>
       </ul>
       <div class="footer-social">
-        <svg class="social-svg" width="30px" height="30px">
-          <use xlink:href="./image/symbol-defs.svg#icon-facebook" x="" y="" />
-        </svg>
-        <svg class="social-svg" width="30px" height="30px">
-          <use xlink:href="./image/symbol-defs.svg#icon-linkedin" x="" y="" />
-        </svg>
-        <svg class="social-svg" width="30px" height="30px">
-          <use xlink:href="./image/symbol-defs.svg#icon-google" x="" y="" />
-        </svg>
+        <div class="socials">
+          <svg class="social-svg" width="30px" height="30px">
+            <use xlink:href="./image/symbol-defs.svg#icon-facebook" x="" y="" />
+          </svg>
+          <svg class="social-svg" width="30px" height="30px">
+            <use xlink:href="./image/symbol-defs.svg#icon-linkedin" x="" y="" />
+          </svg>
+          <svg class="social-svg" width="30px" height="30px">
+            <use xlink:href="./image/symbol-defs.svg#icon-google" x="" y="" />
+          </svg>
+        </div>
         <p class="date-of-copy">Copyright © 2019</p>
       </div>
       <div class="footer-circle">
