--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               <div class="icon-title getting-end">
                 <h4 class="getting-pretitle pretitle-change">Planning Your Experiences</h4>
                 <div class="item-content">
-                  <p class="getting-pretext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus
+                  <p class="getting-pretext pretext-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus
                     mauris in lectus tempus, eget tincidunt lacus
                     varius.</p>
                   <div class="mobile-block">
